--- a/composer.json
+++ b/composer.json
@@ -166,8 +166,7 @@
         "psr-4": {
             "Sylius\\Behat\\": "src/Sylius/Behat/",
             "Sylius\\Bundle\\": "src/Sylius/Bundle/",
-            "Sylius\\Component\\": "src/Sylius/Component/",
-            "files": ["app/AppKernel.php"]
+            "Sylius\\Component\\": "src/Sylius/Component/"
         }
     },
     "autoload-dev": {
